# Autoware-Trajectory-Prediction

./: README.md  model_trained2.pt  rviz.launch.py
predictor_template/: instructions.txt
predictor_template/ws_template/install/: local_setup.sh  setup.sh
predictor_template/ws_template/install/predictor_template/lib/predictor_template/: predictor
predictor_template/ws_template/install/predictor_template/share/predictor_template/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
predictor_template/ws_template/src/predictor_template/: package.xml  setup.cfg  setup.py
predictor_template/ws_template/src/predictor_template/predictor_template/: data_predictor.py  predicted_object_shape.py  prediction_result.txt
predictor_template/ws_template/src/predictor_template/predictor_template/submodules/: autoware_feeder.py  grip_predictor.py  model.py  usage_example.py  usage_example2.py
predictor_template/ws_template/src/predictor_template/predictor_template/submodules/layers/: graph_conv_block.py
